--- a/compose.yaml
+++ b/compose.yaml
@@ -2,8 +2,6 @@ version: "3"
 services:
   web:
     build: .
-    image: ngin-public_html
-    volumes:
-      - ./public_html/:/usr/share/nginx/html/
+    image: ghcr.io/angelocho/hello-2048/nginx-public-html:v1
     ports:
       - "8080:80"
